# pink-transcriber

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  go.mod  go.sum  pink.yaml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: build.yml
ai-docs/: CLAUDE.md  REVIEW.md
cmd/pink-transcriber/: context.md  main.go
internal/bootstrap/: bootstrap.go
internal/daemon/: daemon.go  process_unix.go  process_windows.go
internal/transcriber/: transcriber.go
src/pink_transcriber/: config.py
src/pink_transcriber/cli/: client.py  server.py
src/pink_transcriber/core/: model.py
src/pink_transcriber/daemon/: singleton.py  worker.py
